fix scss home-guest for overflow

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10999,7 +10999,7 @@ a.text-dark:focus {
   left: 0;
   z-index: 100;
   height: 225px;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .home_jumbo .left_side .out-doctors .wrap-doctors .list_profile {
@@ -11044,10 +11044,10 @@ a.text-dark:focus {
 .home_jumbo .right_side .img-wrap {
   height: 100%;
   margin-top: 10px;
-  overflow: hidden;
   border: white 1px solid;
   display: flex;
   justify-content: center;
+  overflow-y: auto;
 }
 
 .home_jumbo .right_side .img-wrap .jumbo_img {
@@ -11067,7 +11067,7 @@ a.text-dark:focus {
 .ourDoctors .my_cards {
   display: flex;
   flex-wrap: nowrap;
-  overflow: scroll;
+  overflow-x: scroll;
 }
 
 .ourDoctors .my_cards .my_card_wrapper .my_card {
