--- a/resources/sass/partials/_fronthome.scss
+++ b/resources/sass/partials/_fronthome.scss
@@ -75,7 +75,7 @@
               z-index: 100;
               
               height: 225px;
-              overflow: scroll;
+              overflow: auto;
                 
                 .wrap-doctors {
                     .list_profile {
@@ -128,10 +128,10 @@
             .img-wrap {
                     height: 100%;
                     margin-top: 10px;
-                    overflow: hidden;
                     border: white 1px solid ;
                     display: flex;
                     justify-content: center;
+                    overflow-y: auto;
                     
                 .jumbo_img {
                      
@@ -157,7 +157,7 @@
         .my_cards {
             display: flex;
             flex-wrap: nowrap;
-            overflow: scroll;
+            overflow-x: scroll;
             
             .my_card_wrapper {
                 
